i've made some chnages

--- a/index.html
+++ b/index.html
@@ -7,5 +7,7 @@
 </head>
 <body>
     <h1>Hello TC NIS</h1>
+    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Alias neque, aspernatur aliquid perferendis quos laudantium quo soluta blanditiis architecto in consequatur delectus est rem temporibus quas dignissimos veniam aliquam nam?</p>
+    <h2>I wish you all happy holidays</h2>
 </body>
 </html>
