i've added a picture

--- a/index.html
+++ b/index.html
@@ -9,5 +9,6 @@
     <h1>Hello TC NIS</h1>
     <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Alias neque, aspernatur aliquid perferendis quos laudantium quo soluta blanditiis architecto in consequatur delectus est rem temporibus quas dignissimos veniam aliquam nam?</p>
     <h2>I wish you all happy holidays</h2>
+    <img src="photo.jpg" alt="" width="400px">
 </body>
 </html>
